# 15418-Final-Project

./: .gitignore  CMakeLists.txt  Gemfile  Makefile  README.txt  UPDATES.txt  _config.yml  build_project.sh  connect5  engine_vs_engine  engine_vs_random  eval_board  eval_function.md  examples.md  index.md  midterm_report.md  objs%_ispc.h  res.txt  run_engine
.github/workflows/: jekyll-gh-pages.yml
benchmark/: CMakeLists.txt  Connect5_bench  default_3.csv  main.cpp  omp_3.csv
boards/: 10x7_dense.board  10x7_sparse.board  19x19.txt  3x4.board  7x6_dense.board  board.txt  easy_win.board  sim_depth_x3_o3_mv_0.board  sim_depth_x3_o3_mv_1.board  sim_depth_x3_o3_mv_10.board  sim_depth_x3_o3_mv_11.board  sim_depth_x3_o3_mv_12.board  sim_depth_x3_o3_mv_13.board  sim_depth_x3_o3_mv_14.board  sim_depth_x3_o3_mv_15.board  sim_depth_x3_o3_mv_16.board  sim_depth_x3_o3_mv_17.board  sim_depth_x3_o3_mv_18.board  sim_depth_x3_o3_mv_19.board  sim_depth_x3_o3_mv_2.board  sim_depth_x3_o3_mv_20.board  sim_depth_x3_o3_mv_3.board  sim_depth_x3_o3_mv_4.board  sim_depth_x3_o3_mv_5.board  sim_depth_x3_o3_mv_6.board  sim_depth_x3_o3_mv_7.board  sim_depth_x3_o3_mv_8.board  sim_depth_x3_o3_mv_9.board  sim_depth_x3_o4_mv_1.board  sim_depth_x3_o4_mv_10.board  sim_depth_x3_o4_mv_11.board  sim_depth_x3_o4_mv_12.board  sim_depth_x3_o4_mv_13.board  sim_depth_x3_o4_mv_14.board  sim_depth_x3_o4_mv_15.board  sim_depth_x3_o4_mv_16.board  sim_depth_x3_o4_mv_17.board  sim_depth_x3_o4_mv_18.board  sim_depth_x3_o4_mv_19.board  sim_depth_x3_o4_mv_2.board  (+26 more)
cuda/: CMakeLists.txt  board.cu  engine_board.cpp  engine_board.cu  engine_board.cuh  engine_board.h  eval.cu  eval.cuh  main.cu  tests.cu
docs/: _config.yml
objs/: eval_ispc.h
prof/: data.txt  profile  profile.py
prof/prof_boards/: 19x19.board
src/: .__afs2DA6  .__afsEA13  .__afsFCD6  CMakeLists.txt  board.cpp  board.h  callgrind.out.76701  engine_board.cpp  engine_board.h  engine_vs_engine.cpp  engine_vs_random.cpp  eval_board.cpp  main.cpp  profile.cpp  profile.sh  run_engine.cpp  timing.h
src/engine/: .__afs3961  .__afs6C36  .__afs8D9  .__afs9FAC  .__afsA1E4  board.cpp  board.h  engine_board.cpp  engine_board.h  eval.ispc
src/engine/objs/: eval_ispc.h
test/: CMakeLists.txt  Connect5_test  main.cpp
test/boards/: 002.txt  003.txt  004.txt  005.txt  006.txt  007.txt  008.txt  009.txt  010.txt
visualization/: board.html
